sao: Fix border visibility in text forms [CUSTOM] (#240)
Fix PCLAS-993

---------

--- a/sao/src/theme/coog/sao.less
+++ b/sao/src/theme/coog/sao.less
@@ -14,6 +14,7 @@
 @coog-background:       @color-white;
 
 @coog-base-blur:        0px;
+@coog-box-opacity:      0.3;
 @coog-background-opacity: 1;
 @coog-main-opacity:     1;
 @coog-header-opacity:   1;
@@ -542,8 +543,17 @@ div.form-selection select.form-control {
 }
 
 div.form-text {
-    padding:                0px 15px 0px 15px;
+    padding:                3px 10px 3px 10px;
+    textarea.form-control {
+        border: 1px solid rgba(@color-lighter-grey, @coog-box-opacity);
+        box-shadow: 0 1px 4px rgba(@color-black,    @coog-box-opacity);
+        padding:            5px;
+        margin-bottom:      2px;
 
+        &:focus {
+            box-shadow: 0 1px 4px rgba(@color-blue, 0.6);
+        }
+    }
     // highlight readonly text contents
     .readonly {
         textarea.form-control {
@@ -718,18 +728,18 @@ div.infobar {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: var(--lightestgrey); 
+    background: var(--lightestgrey);
 }
-  
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: @color-lighter-grey; 
+    background: @color-lighter-grey;
     border-radius: 3px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: @color-grey; 
+    background: @color-grey;
 }
 
 ///////////////////////////////////////////////////////////////////////////////
